--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,14 +12,8 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-
-      - name: Install Dependencies
-        run: npm i
+      - name: Setup Environment
+        uses: clutchd/turbostart-npm@v1.0.1
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
