--- a/packages/clsx/package.json
+++ b/packages/clsx/package.json
@@ -16,6 +16,9 @@
     "test": "jest"
   },
   "devDependencies": {
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "ts-jest": "^29.0.3",
     "tsup": "^6.5.0",
     "typescript": "^4.8.4"
   },
