--- a/packages/get-initials/package.json
+++ b/packages/get-initials/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@clutchd/config": "*",
+    "@clutchd/is-empty": "^2.0.1",
     "@clutchd/tsconfig": "*",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
