--- a/packages/compose-props/package.json
+++ b/packages/compose-props/package.json
@@ -9,11 +9,15 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
+    "build": "tsup src/index.ts --format esm,cjs --dts --external react",
     "clean": "rm -rf .next .turbo node_modules coverage dist package-lock.json",
-    "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
+    "dev": "tsup src/index.ts --format esm,cjs --watch --dts --external react",
     "prepublish": "npm run build",
     "test": "jest"
+  },
+  "dependencies": {
+    "@clutchd/clsx": "0.1.3",
+    "@clutchd/compose-event-handlers": "^1.0.1"
   },
   "devDependencies": {
     "@clutchd/config": "*",
