--- a/packages/compose-refs/package.json
+++ b/packages/compose-refs/package.json
@@ -22,5 +22,8 @@
     "ts-jest": "^29.0.3",
     "tsup": "^6.5.0",
     "typescript": "^4.8.4"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0"
   }
 }
