--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "@radix-ui/react-compose-refs": "^1.0.0"
+    "@clutchd/compose-props": "^1.1.0",
+    "@clutchd/compose-refs": "^1.0.1"
   }
 }
