--- a/packages/clsx/package.json
+++ b/packages/clsx/package.json
@@ -2,6 +2,7 @@
   "name": "@clutchd/clsx",
   "version": "0.1.3",
   "main": "dist/index.js",
+  "description": "A tinier (228B), more performant implementation of clsx.",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "files": [
@@ -9,18 +10,20 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "build": "tsup src/index.ts --format esm,cjs --dts --external react",
+    "benchmark": "npm run build && node src/benchmark",
+    "build": "tsup src/index.js --format esm,cjs --dts --external react",
     "clean": "rm -rf .next .turbo node_modules coverage dist package-lock.json",
-    "dev": "tsup src/index.ts --format esm,cjs --watch --dts --external react",
+    "dev": "tsup src/index.js --format esm,cjs --watch --dts --external react",
     "prepublish": "npm run build",
     "test": "jest"
   },
   "devDependencies": {
+    "@clutchd/config": "*",
+    "benchmark": "^2.1.4",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
-    "ts-jest": "^29.0.3",
-    "tsup": "^6.5.0",
-    "typescript": "^4.8.4"
+    "terser": "^5.16.1",
+    "tsup": "^6.5.0"
   },
   "dependencies": {
     "clsx": "^1.2.1"
