--- a/packages/clsx/package.json
+++ b/packages/clsx/package.json
@@ -2,7 +2,7 @@
   "name": "@clutchd/clsx",
   "version": "0.1.3",
   "main": "dist/index.js",
-  "description": "A tinier (228B), more performant implementation of clsx.",
+  "description": "A tinier (429B), more performant implementation of clsx.",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "files": [
@@ -10,22 +10,19 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "benchmark": "npm run build && node src/benchmark",
-    "build": "tsup src/index.js --format esm,cjs --dts --external react",
+    "build": "tsup src/index.ts --format esm,cjs --dts --external react",
     "clean": "rm -rf .next .turbo node_modules coverage dist package-lock.json",
-    "dev": "tsup src/index.js --format esm,cjs --watch --dts --external react",
+    "dev": "tsup src/index.ts --format esm,cjs --watch --dts --external react",
     "prepublish": "npm run build",
     "test": "jest"
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "benchmark": "^2.1.4",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "node-fetch": "^2.6.1",
     "terser": "^5.16.1",
-    "tsup": "^6.5.0"
-  },
-  "dependencies": {
-    "clsx": "^1.2.1"
+    "tsup": "^6.5.0",
+    "typescript": "^4.8.4"
   }
 }
