--- a/packages/link/package.json
+++ b/packages/link/package.json
@@ -1,19 +1,23 @@
 {
   "name": "@clutchd/link",
   "version": "0.1.6",
+  "sideEffects": false,
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "sideEffects": false,
   "scripts": {
     "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
     "clean": "rm -rf .next .turbo node_modules coverage dist package-lock.json",
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
     "prepublish": "npm run build",
     "test": "jest"
+  },
+  "dependencies": {
+    "@clutchd/clsx": "1.0.0",
+    "@clutchd/component": "^1.0.0"
   },
   "devDependencies": {
     "@clutchd/config": "*",
@@ -30,9 +34,5 @@
     "next": "^13.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  },
-  "dependencies": {
-    "@clutchd/component": "^1.0.0",
-    "@clutchd/clsx": "1.0.0"
   }
 }
