--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev": "turbo run dev --no-cache --parallel",
     "format": "prettier --write \"**/*.{js,json,jsx,ts,tsx,md,mdx}\"",
     "postinstall": "manypkg check",
-    "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix",
+    "lint": "turbo run lint",
     "release": "turbo run build && changeset publish",
     "test": "turbo run test",
     "typesync": "npx typesync",
@@ -22,8 +22,8 @@
   },
   "dependencies": {
     "@changesets/cli": "^2.22.0",
-    "@clutchd/config": "*",
     "@manypkg/cli": "^0.19.2",
+    "eslint-config-clutchd": "*",
     "prettier": "^2.7.1",
     "turbo": "latest"
   },
