--- a/packages/avatar/package.json
+++ b/packages/avatar/package.json
@@ -1,34 +1,49 @@
 {
   "name": "@clutchd/avatar",
   "version": "0.6.6",
+  "keywords": [
+    "clutchd",
+    "avatar",
+    "tailwind",
+    "next"
+  ],
+  "bugs": {
+    "url": "https://github.com/clutchd/clutchd/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/clutchd/clutchd",
+    "directory": "packages/avatar"
+  },
+  "author": "Clutchd, LLC",
+  "sideEffects": false,
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "sideEffects": false,
   "scripts": {
     "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
     "clean": "rm -rf .next .turbo node_modules coverage dist package-lock.json",
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
+    "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
     "prepublish": "npm run build",
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/component": "^1.0.0",
     "@clutchd/clsx": "1.0.0",
+    "@clutchd/component": "^1.0.0",
     "@clutchd/is-empty": "^2.0.1"
   },
   "devDependencies": {
     "@clutchd/config": "*",
     "@clutchd/tailwind": "0.11.0",
     "@clutchd/tsconfig": "*",
-    "@types/jest": "^29.2.4",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.9",
+    "@types/react": "^18.0.26",
+    "eslint-config-clutchd": "*",
     "jest": "^29.3.1",
-    "next": "^13.0.5",
+    "next": "^13.1.0",
     "postcss": "^8.4.20",
     "react": "^18.2.0",
     "ts-jest": "^29.0.3",
@@ -36,8 +51,7 @@
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
-    "next": "^13.0.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "^13.1.0",
+    "react": "^18.2.0"
   }
 }
