--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -1,6 +1,21 @@
 {
   "name": "@clutchd/card",
   "version": "0.1.14",
+  "keywords": [
+    "clutchd",
+    "card",
+    "tailwind",
+    "next"
+  ],
+  "bugs": {
+    "url": "https://github.com/clutchd/clutchd/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/clutchd/clutchd",
+    "directory": "packages/card"
+  },
+  "author": "Clutchd, LLC",
   "sideEffects": false,
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -12,6 +27,7 @@
     "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
     "clean": "rm -rf .next .turbo node_modules coverage dist package-lock.json",
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
+    "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
     "prepublish": "npm run build",
     "test": "jest"
   },
@@ -23,8 +39,7 @@
     "@clutchd/config": "*",
     "@clutchd/tailwind": "0.11.0",
     "@clutchd/tsconfig": "*",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
+    "eslint-config-clutchd": "*",
     "jest": "^29.3.1",
     "postcss": "^8.4.20",
     "react": "^18.2.0",
@@ -33,8 +48,6 @@
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
-    "next": "^13.0.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.2.0"
   }
 }
