--- a/packages/clsx-benchmark/package.json
+++ b/packages/clsx-benchmark/package.json
@@ -1,18 +1,33 @@
 {
   "name": "@clutchd/clsx-benchmark",
   "private": true,
+  "keywords": [
+    "clutchd",
+    "avatar",
+    "tailwind",
+    "next"
+  ],
+  "bugs": {
+    "url": "https://github.com/clutchd/clutchd/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/clutchd/clutchd",
+    "directory": "packages/clsx-benchmark"
+  },
+  "author": "Clutchd, LLC",
   "scripts": {
-    "benchmark": "node src/index.js",
-    "build": "tsup src/index.js --format esm,cjs --dts --external react",
-    "clean": "rm -rf .next .turbo node_modules coverage dist package-lock.json"
+    "benchmark": "node index.js",
+    "build": "tsup index.js --format esm,cjs --dts --external react",
+    "clean": "rm -rf .next .turbo node_modules coverage dist package-lock.json",
+    "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx"
   },
   "devDependencies": {
     "@clutchd/clsx": "1.0.0",
     "@clutchd/config": "*",
     "benchmark": "^2.1.4",
     "clsx": "^1.2.1",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
+    "eslint-config-clutchd": "*",
     "tsup": "^6.5.0"
   }
 }
