--- a/packages/clsx/package.json
+++ b/packages/clsx/package.json
@@ -2,6 +2,19 @@
   "name": "@clutchd/clsx",
   "version": "1.0.0",
   "description": "A tinier (440B), more performant implementation of clsx.",
+  "keywords": [
+    "clutchd",
+    "clsx"
+  ],
+  "bugs": {
+    "url": "https://github.com/clutchd/clutchd/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/clutchd/clutchd",
+    "directory": "packages/clsx"
+  },
+  "author": "Clutchd, LLC",
   "sideEffects": false,
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -13,13 +26,15 @@
     "build": "tsup src/index.ts --format esm,cjs --dts --external react",
     "clean": "rm -rf .next .turbo node_modules coverage dist package-lock.json",
     "dev": "tsup src/index.ts --format esm,cjs --watch --dts --external react",
+    "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
     "prepublish": "npm run build",
     "test": "jest"
   },
   "devDependencies": {
     "@clutchd/config": "*",
+    "@clutchd/tsconfig": "*",
+    "eslint-config-clutchd": "*",
     "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
     "node-fetch": "^2.6.1",
     "terser": "^5.16.1",
     "tsup": "^6.5.0",
