--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -2,17 +2,33 @@
   "name": "@clutchd/config",
   "version": "0.2.0",
   "private": true,
+  "keywords": [
+    "clutchd",
+    "config",
+    "tailwind",
+    "jest"
+  ],
+  "bugs": {
+    "url": "https://github.com/clutchd/clutchd/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/clutchd/clutchd",
+    "directory": "packages/config"
+  },
+  "author": "Clutchd, LLC",
   "main": "index.js",
   "files": [
-    "*.js"
+    "*.config.js"
   ],
+  "scripts": {
+    "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx"
+  },
   "dependencies": {
     "@fontsource/manrope": "^4.5.6",
     "autoprefixer": "^10.4.7",
-    "eslint-config-next": "^13.0.6",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-clutchd": "*",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.1"
-  },
-  "devDependencies": {}
+  }
 }
