--- a/packages/divider/package.json
+++ b/packages/divider/package.json
@@ -1,6 +1,22 @@
 {
   "name": "@clutchd/divider",
   "version": "1.0.4",
+  "keywords": [
+    "clutchd",
+    "divider",
+    "seperator",
+    "tailwind",
+    "next"
+  ],
+  "bugs": {
+    "url": "https://github.com/clutchd/clutchd/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/clutchd/clutchd",
+    "directory": "packages/divider"
+  },
+  "author": "Clutchd, LLC",
   "sideEffects": false,
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -12,6 +28,7 @@
     "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
     "clean": "rm -rf .next .turbo node_modules coverage dist package-lock.json",
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
+    "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
     "prepublish": "npm run build",
     "test": "jest"
   },
@@ -23,10 +40,9 @@
     "@clutchd/config": "*",
     "@clutchd/tailwind": "0.11.0",
     "@clutchd/tsconfig": "*",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
+    "eslint-config-clutchd": "*",
     "jest": "^29.3.1",
-    "next": "^13.0.5",
+    "next": "^13.1.0",
     "postcss": "^8.4.20",
     "react": "^18.2.0",
     "ts-jest": "^29.0.3",
@@ -34,8 +50,7 @@
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
-    "next": "^13.0.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "^13.1.0",
+    "react": "^18.2.0"
   }
 }
