--- a/packages/get-initials/package.json
+++ b/packages/get-initials/package.json
@@ -1,6 +1,20 @@
 {
   "name": "@clutchd/get-initials",
   "version": "1.2.2",
+  "keywords": [
+    "clutchd",
+    "get-initials",
+    "initials"
+  ],
+  "bugs": {
+    "url": "https://github.com/clutchd/clutchd/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/clutchd/clutchd",
+    "directory": "packages/get-initials"
+  },
+  "author": "Clutchd, LLC",
   "sideEffects": false,
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -12,6 +26,7 @@
     "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
     "clean": "rm -rf .next .turbo node_modules coverage dist package-lock.json",
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
+    "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
     "prepublish": "npm run build",
     "test": "jest"
   },
@@ -19,8 +34,8 @@
     "@clutchd/config": "*",
     "@clutchd/is-empty": "^2.0.1",
     "@clutchd/tsconfig": "*",
+    "eslint-config-clutchd": "*",
     "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
     "ts-jest": "^29.0.3",
     "tsup": "^6.5.0",
     "typescript": "^4.8.4"
