--- a/packages/protect/package.json
+++ b/packages/protect/package.json
@@ -1,6 +1,21 @@
 {
   "name": "@clutchd/protect",
   "version": "0.5.6",
+  "keywords": [
+    "clutchd",
+    "protect",
+    "tailwind",
+    "next"
+  ],
+  "bugs": {
+    "url": "https://github.com/clutchd/clutchd/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/clutchd/clutchd",
+    "directory": "packages/protect"
+  },
+  "author": "Clutchd, LLC",
   "sideEffects": false,
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -12,13 +27,14 @@
     "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
     "clean": "rm -rf .next .turbo node_modules coverage dist package-lock.json",
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
+    "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
     "prepublish": "npm run build",
     "test": "jest"
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.9",
+    "@types/react": "^18.0.26",
+    "eslint-config-clutchd": "*",
     "jest": "^29.3.1",
     "next-auth": "^4.18.6",
     "postcss": "^8.4.20",
@@ -28,9 +44,7 @@
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
-    "next": "^13.0.5",
     "next-auth": "^4.18.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.2.0"
   }
 }
