--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -1,6 +1,21 @@
 {
   "name": "@clutchd/skeleton",
   "version": "0.4.11",
+  "keywords": [
+    "clutchd",
+    "skeleton",
+    "tailwind",
+    "next"
+  ],
+  "bugs": {
+    "url": "https://github.com/clutchd/clutchd/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/clutchd/clutchd",
+    "directory": "packages/skeleton"
+  },
+  "author": "Clutchd, LLC",
   "sideEffects": false,
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -12,6 +27,7 @@
     "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
     "clean": "rm -rf .next .turbo node_modules coverage dist package-lock.json",
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
+    "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
     "prepublish": "npm run build",
     "test": "jest"
   },
@@ -23,9 +39,8 @@
     "@clutchd/config": "*",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^13.2.0",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
     "@types/testing-library__jest-dom": "^5.14.5",
+    "eslint-config-clutchd": "*",
     "jest": "^29.3.1",
     "next-auth": "^4.18.6",
     "postcss": "^8.4.20",
@@ -35,9 +50,7 @@
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
-    "next": "^13.0.5",
     "next-auth": "^4.18.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.2.0"
   }
 }
