--- a/packages/tailwind/package.json
+++ b/packages/tailwind/package.json
@@ -1,6 +1,19 @@
 {
   "name": "@clutchd/tailwind",
   "version": "0.11.0",
+  "keywords": [
+    "clutchd",
+    "tailwind"
+  ],
+  "bugs": {
+    "url": "https://github.com/clutchd/clutchd/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/clutchd/clutchd",
+    "directory": "packages/tailwind"
+  },
+  "author": "Clutchd, LLC",
   "sideEffects": false,
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -12,11 +25,13 @@
     "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
     "clean": "rm -rf .next .turbo node_modules coverage dist package-lock.json",
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
+    "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
     "prepublish": "npm run build",
     "test": "jest"
   },
   "devDependencies": {
     "@clutchd/config": "*",
+    "eslint-config-clutchd": "*",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "tsup": "^6.5.0",
