--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,9 @@
       "dependsOn": ["^dev"],
       "cache": false
     },
+    "lint": {
+      "cache": false
+    },
     "test": {
       "dependsOn": ["^build"],
       "outputs": ["coverage/**"]
