--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "next build",
     "clean": "rm -rf .next .turbo node_modules coverage dist package-lock.json",
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "start": "next start"
   },
   "dependencies": {
