--- a/packages/link/package.json
+++ b/packages/link/package.json
@@ -39,6 +39,7 @@
     "@clutchd/config": "*",
     "eslint-config-clutchd": "*",
     "jest": "^29.3.1",
+    "next": "^13.1.2",
     "postcss": "^8.4.20",
     "react": "^18.2.0",
     "ts-jest": "^29.0.3",
@@ -46,6 +47,7 @@
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
+    "next": "^13.1.2",
     "react": "^18.2.0"
   }
 }
