--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -12,6 +12,7 @@
     "@clutchd/avatar": "*",
     "@clutchd/layout": "*",
     "@clutchd/text": "*",
+    "@next/font": "^13.1.2",
     "next": "^13.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
