--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -25,8 +25,8 @@
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@clutchd/eslint-config-clutchd": "*",
     "autoprefixer": "^10.4.7",
-    "eslint-config-clutchd": "*",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.1"
   }
