--- a/packages/clsx/package.json
+++ b/packages/clsx/package.json
@@ -32,8 +32,8 @@
   },
   "devDependencies": {
     "@clutchd/config": "*",
+    "@clutchd/eslint-config-clutchd": "*",
     "@clutchd/tsconfig": "*",
-    "eslint-config-clutchd": "*",
     "jest": "^29.3.1",
     "node-fetch": "^2.6.1",
     "terser": "^5.16.1",
