--- a/packages/compose-props/package.json
+++ b/packages/compose-props/package.json
@@ -36,7 +36,7 @@
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "eslint-config-clutchd": "*",
+    "@clutchd/eslint-config-clutchd": "*",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "ts-jest": "^29.0.3",
