--- a/packages/divider/package.json
+++ b/packages/divider/package.json
@@ -38,9 +38,9 @@
   },
   "devDependencies": {
     "@clutchd/config": "*",
+    "@clutchd/eslint-config-clutchd": "*",
     "@clutchd/tailwind": "0.11.0",
     "@clutchd/tsconfig": "*",
-    "eslint-config-clutchd": "*",
     "jest": "^29.3.1",
     "next": "^13.1.2",
     "postcss": "^8.4.20",
