--- a/packages/get-initials/package.json
+++ b/packages/get-initials/package.json
@@ -32,9 +32,9 @@
   },
   "devDependencies": {
     "@clutchd/config": "*",
+    "@clutchd/eslint-config-clutchd": "*",
     "@clutchd/is-empty": "^2.0.1",
     "@clutchd/tsconfig": "*",
-    "eslint-config-clutchd": "*",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "tsup": "^6.5.0",
