--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -38,8 +38,8 @@
   },
   "devDependencies": {
     "@clutchd/config": "*",
+    "@clutchd/eslint-config-clutchd": "*",
     "@clutchd/tailwind": "0.11.0",
-    "eslint-config-clutchd": "*",
     "jest": "^29.3.1",
     "postcss": "^8.4.20",
     "react": "^18.2.0",
