--- a/.github/workflows/turbotest.yml
+++ b/.github/workflows/turbotest.yml
@@ -24,3 +24,13 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: "**/clover.xml"
+
+      - name: Create Release Pull Request or Publish to npm
+        if: ${{ github.ref == 'refs/heads/main' }}
+        id: changesets
+        uses: changesets/action@v1
+        with:
+          publish: npm run release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
