--- a/.github/workflows/turbotest.yml
+++ b/.github/workflows/turbotest.yml
@@ -30,7 +30,7 @@ jobs:
           files: "**/clover.xml"
 
       - name: Create Release Pull Request or Publish to npm
-        if: ${{ github.ref == 'refs/heads/main' }}
+        if: ${{ github.ref == 'refs/heads/main' }} && ${{ !cancelled() }}
         id: changesets
         uses: changesets/action@v1
         with:
