--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@clutchd/avatar": "*",
+    "@clutchd/card": "*",
+    "@clutchd/copyright": "*",
+    "@clutchd/divider": "*",
+    "@clutchd/flex": "*",
     "@clutchd/layout": "*",
     "@clutchd/link": "*",
     "@clutchd/text": "*",
