--- a/packages/clsx/package.json
+++ b/packages/clsx/package.json
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "@clutchd/eslint-config-clutchd": "*",
+    "@clutchd/eslint-config-clutchd": "^1.0.0",
     "@clutchd/tsconfig": "*",
     "jest": "^29.3.1",
     "node-fetch": "^2.6.1",
