--- a/packages/compose-props/package.json
+++ b/packages/compose-props/package.json
@@ -31,12 +31,12 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/clsx": "1.0.1",
+    "@clutchd/clsx": "^1.0.1",
     "@clutchd/compose-event-handlers": "^1.0.2"
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "@clutchd/eslint-config-clutchd": "*",
+    "@clutchd/eslint-config-clutchd": "^1.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "ts-jest": "^29.0.3",
