--- a/packages/get-initials/package.json
+++ b/packages/get-initials/package.json
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "@clutchd/eslint-config-clutchd": "*",
+    "@clutchd/eslint-config-clutchd": "^1.0.0",
     "@clutchd/is-empty": "^2.0.1",
     "@clutchd/tsconfig": "*",
     "jest": "^29.3.1",
