--- a/packages/grid/package.json
+++ b/packages/grid/package.json
@@ -32,13 +32,13 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/clsx": "1.0.1",
+    "@clutchd/clsx": "^1.0.1",
     "@clutchd/component": "^1.0.1"
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "@clutchd/eslint-config-clutchd": "*",
-    "@clutchd/tailwind": "1.0.0",
+    "@clutchd/eslint-config-clutchd": "^1.0.0",
+    "@clutchd/tailwind": "^1.0.0",
     "@clutchd/tsconfig": "*",
     "jest": "^29.3.1",
     "postcss": "^8.4.20",
