--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -32,14 +32,14 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/clsx": "1.0.1",
+    "@clutchd/clsx": "^1.0.1",
     "@clutchd/component": "^1.0.1",
     "@clutchd/flex": "0.1.15"
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "@clutchd/eslint-config-clutchd": "*",
-    "@clutchd/tailwind": "1.0.0",
+    "@clutchd/eslint-config-clutchd": "^1.0.0",
+    "@clutchd/tailwind": "^1.0.0",
     "jest": "^29.3.1",
     "postcss": "^8.4.20",
     "react": "^18.2.0",
