--- a/packages/link/package.json
+++ b/packages/link/package.json
@@ -32,12 +32,12 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/clsx": "1.0.1",
+    "@clutchd/clsx": "^1.0.1",
     "@clutchd/component": "^1.0.1"
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "@clutchd/eslint-config-clutchd": "*",
+    "@clutchd/eslint-config-clutchd": "^1.0.0",
     "jest": "^29.3.1",
     "next": "^13.1.2",
     "postcss": "^8.4.20",
