--- a/packages/protect/package.json
+++ b/packages/protect/package.json
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "@clutchd/eslint-config-clutchd": "*",
+    "@clutchd/eslint-config-clutchd": "^1.0.0",
     "@types/react": "^18.0.26",
     "jest": "^29.3.1",
     "next-auth": "^4.18.6",
