--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -32,12 +32,12 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/clsx": "1.0.1",
+    "@clutchd/clsx": "^1.0.1",
     "@clutchd/component": "^1.0.1"
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "@clutchd/eslint-config-clutchd": "*",
+    "@clutchd/eslint-config-clutchd": "^1.0.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^13.2.0",
     "@types/testing-library__jest-dom": "^5.14.5",
