--- a/packages/tailwind/package.json
+++ b/packages/tailwind/package.json
@@ -31,7 +31,7 @@
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "@clutchd/eslint-config-clutchd": "*",
+    "@clutchd/eslint-config-clutchd": "^1.0.0",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "tsup": "^6.5.0",
