--- a/packages/text/package.json
+++ b/packages/text/package.json
@@ -32,14 +32,14 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/clsx": "1.0.1",
+    "@clutchd/clsx": "^1.0.1",
     "@clutchd/component": "^1.0.1",
     "@clutchd/skeleton": "^0.4.12"
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "@clutchd/eslint-config-clutchd": "*",
-    "@clutchd/tailwind": "1.0.0",
+    "@clutchd/eslint-config-clutchd": "^1.0.0",
+    "@clutchd/tailwind": "^1.0.0",
     "@clutchd/tsconfig": "*",
     "@types/react": "^18.0.26",
     "jest": "^29.3.1",
