--- a/packages/avatar/package.json
+++ b/packages/avatar/package.json
@@ -40,7 +40,7 @@
     "@clutchd/config": "*",
     "@clutchd/eslint-config-clutchd": "^1.0.0",
     "@clutchd/tailwind": "^1.0.0",
-    "@clutchd/tsconfig": "*",
+    "@clutchd/tsconfig": "^1.0.0",
     "@types/react": "^18.0.26",
     "jest": "^29.3.1",
     "next": "^13.1.2",
