--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -39,7 +39,7 @@
     "@clutchd/config": "*",
     "@clutchd/eslint-config-clutchd": "^1.0.0",
     "@clutchd/tailwind": "^1.0.0",
-    "@clutchd/tsconfig": "*",
+    "@clutchd/tsconfig": "^1.0.0",
     "jest": "^29.3.1",
     "postcss": "^8.4.20",
     "react": "^18.2.0",
