--- a/packages/clsx/package.json
+++ b/packages/clsx/package.json
@@ -33,7 +33,7 @@
   "devDependencies": {
     "@clutchd/config": "*",
     "@clutchd/eslint-config-clutchd": "^1.0.0",
-    "@clutchd/tsconfig": "*",
+    "@clutchd/tsconfig": "^1.0.0",
     "jest": "^29.3.1",
     "node-fetch": "^2.6.1",
     "terser": "^5.16.1",
