--- a/packages/copyright/package.json
+++ b/packages/copyright/package.json
@@ -37,7 +37,7 @@
   "devDependencies": {
     "@clutchd/config": "*",
     "@clutchd/eslint-config-clutchd": "^1.0.0",
-    "@clutchd/tsconfig": "*",
+    "@clutchd/tsconfig": "^1.0.0",
     "jest": "^29.3.1",
     "next": "^13.1.2",
     "postcss": "^8.4.20",
