--- a/packages/get-initials/package.json
+++ b/packages/get-initials/package.json
@@ -34,7 +34,7 @@
     "@clutchd/config": "*",
     "@clutchd/eslint-config-clutchd": "^1.0.0",
     "@clutchd/is-empty": "^2.0.1",
-    "@clutchd/tsconfig": "*",
+    "@clutchd/tsconfig": "^1.0.0",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "tsup": "^6.5.0",
