--- a/packages/get-initials/package.json
+++ b/packages/get-initials/package.json
@@ -30,10 +30,12 @@
     "prepublish": "npm run build",
     "test": "jest"
   },
+  "dependencies": {
+    "@clutchd/is-empty": "^2.0.1"
+  },
   "devDependencies": {
     "@clutchd/config": "*",
     "@clutchd/eslint-config-clutchd": "^1.0.0",
-    "@clutchd/is-empty": "^2.0.1",
     "@clutchd/tsconfig": "^1.0.0",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
