--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -22,7 +22,7 @@
   "devDependencies": {
     "@clutchd/config": "*",
     "@clutchd/tailwind": "*",
-    "@clutchd/tsconfig": "*",
+    "@clutchd/tsconfig": "^1.0.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "typescript": "^4.8.4"
