--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -14,7 +14,9 @@
     "@clutchd/copyright": "*",
     "@clutchd/divider": "*",
     "@clutchd/flex": "*",
+    "@clutchd/grid": "*",
     "@clutchd/input": "*",
+    "@clutchd/label": "*",
     "@clutchd/layout": "*",
     "@clutchd/link": "*",
     "@clutchd/text": "*",
