--- a/packages/block/package.json
+++ b/packages/block/package.json
@@ -4,8 +4,8 @@
   "keywords": [
     "clutchd",
     "block",
-    "tailwind",
-    "next"
+    "react",
+    "tailwind"
   ],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
@@ -25,7 +25,7 @@
   ],
   "scripts": {
     "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
-    "clean": "rm -rf .next .turbo node_modules coverage dist package-lock.json",
+    "clean": "rm -rf .turbo node_modules coverage dist package-lock.json",
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
     "prepublish": "npm run build",
@@ -40,7 +40,6 @@
     "@clutchd/eslint-config-clutchd": "^1.0.0",
     "@clutchd/tailwind": "^2.0.0",
     "jest": "^29.3.1",
-    "next": "^13.1.2",
     "postcss": "^8.4.20",
     "react": "^18.2.0",
     "ts-jest": "^29.0.3",
@@ -48,7 +47,6 @@
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
-    "next": "^13.1.2",
     "react": "^18.2.0"
   }
 }
