--- a/packages/eslint-config-clutchd/package.json
+++ b/packages/eslint-config-clutchd/package.json
@@ -18,9 +18,9 @@
   "author": "Clutchd, LLC",
   "main": "index.js",
   "dependencies": {
-    "eslint-config-next": "^13.4.2",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-config-turbo": "^1.9.5",
-    "eslint-plugin-react": "^7.32.2"
+    "eslint-config-next": "13.4.2",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-config-turbo": "1.9.5",
+    "eslint-plugin-react": "7.32.2"
   }
 }
