--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "version-packages": "changeset version"
   },
   "dependencies": {
-    "@changesets/cli": "^2.22.0",
-    "@clutchd/eslint-config-clutchd": "^1.0.0",
-    "@manypkg/cli": "^0.19.2",
-    "prettier": "^2.8.4",
+    "@changesets/cli": "2.22.0",
+    "@clutchd/eslint-config-clutchd": "1.1.0",
+    "@manypkg/cli": "0.19.2",
+    "prettier": "2.8.4",
     "turbo": "latest"
   },
   "engines": {
