--- a/packages/clsx-benchmark/package.json
+++ b/packages/clsx-benchmark/package.json
@@ -24,11 +24,11 @@
   "devDependencies": {
     "@clutchd/clsx": "*",
     "@clutchd/config": "*",
-    "@clutchd/eslint-config-clutchd": "^1.0.0",
-    "benchmark": "^2.1.4",
-    "classcat": "^5.0.4",
-    "classix": "^2.1.18",
-    "classnames": "^2.2.6",
-    "clsx": "^1.2.1"
+    "@clutchd/eslint-config-clutchd": "1.1.0",
+    "benchmark": "2.1.4",
+    "classcat": "5.0.4",
+    "classix": "2.1.18",
+    "classnames": "2.2.6",
+    "clsx": "1.2.1"
   }
 }
