--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -32,23 +32,23 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/compose-props": "^1.1.3",
-    "@clutchd/compose-refs": "^1.0.2"
+    "@clutchd/compose-props": "1.1.3",
+    "@clutchd/compose-refs": "1.0.2"
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "@clutchd/eslint-config-clutchd": "^1.0.0",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^13.2.0",
-    "@types/react": "^18.0.26",
-    "@types/testing-library__jest-dom": "^5.14.5",
-    "jest": "^29.3.1",
-    "react": "^18.2.0",
-    "ts-jest": "^29.0.3",
-    "tsup": "^6.5.0",
-    "typescript": "^5.0.4"
+    "@clutchd/eslint-config-clutchd": "1.1.0",
+    "@testing-library/jest-dom": "5.16.1",
+    "@testing-library/react": "13.2.0",
+    "@types/react": "18.2.6",
+    "@types/testing-library__jest-dom": "5.14.5",
+    "jest": "29.3.1",
+    "react": "18.2.0",
+    "ts-jest": "29.0.3",
+    "tsup": "6.7.0",
+    "typescript": "5.0.4"
   },
   "peerDependencies": {
-    "react": "^18.2.0"
+    "react": "18.2.0"
   }
 }
