--- a/packages/compose-props/package.json
+++ b/packages/compose-props/package.json
@@ -31,16 +31,16 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/clsx": "^1.0.2",
-    "@clutchd/compose-event-handlers": "^1.0.3"
+    "@clutchd/clsx": "1.0.2",
+    "@clutchd/compose-event-handlers": "1.0.3"
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "@clutchd/eslint-config-clutchd": "^1.0.0",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
-    "ts-jest": "^29.0.3",
-    "tsup": "^6.5.0",
-    "typescript": "^5.0.4"
+    "@clutchd/eslint-config-clutchd": "1.1.0",
+    "jest": "29.3.1",
+    "jest-environment-jsdom": "29.3.1",
+    "ts-jest": "29.0.3",
+    "tsup": "6.7.0",
+    "typescript": "5.0.4"
   }
 }
