--- a/packages/get-initials/package.json
+++ b/packages/get-initials/package.json
@@ -31,15 +31,15 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/is-empty": "^2.0.4"
+    "@clutchd/is-empty": "2.0.4"
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "@clutchd/eslint-config-clutchd": "^1.0.0",
-    "@clutchd/tsconfig": "^1.0.0",
-    "jest": "^29.3.1",
-    "ts-jest": "^29.0.3",
-    "tsup": "^6.5.0",
-    "typescript": "^5.0.4"
+    "@clutchd/eslint-config-clutchd": "1.1.0",
+    "@clutchd/tsconfig": "1.0.1",
+    "jest": "29.3.1",
+    "ts-jest": "29.0.3",
+    "tsup": "6.7.0",
+    "typescript": "5.0.4"
   }
 }
