--- a/packages/next-auth-prisma-adapter/package.json
+++ b/packages/next-auth-prisma-adapter/package.json
@@ -33,17 +33,17 @@
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "@clutchd/eslint-config-clutchd": "^1.0.0",
-    "@prisma/client": "^4.9.0",
-    "jest": "^29.3.1",
-    "next-auth": "^4.18.6",
-    "prisma": "^4.9.0",
-    "ts-jest": "^29.0.3",
-    "tsup": "^6.5.0",
-    "typescript": "^5.0.4"
+    "@clutchd/eslint-config-clutchd": "1.1.0",
+    "@prisma/client": "4.9.0",
+    "jest": "29.3.1",
+    "next-auth": "4.18.6",
+    "prisma": "4.9.0",
+    "ts-jest": "29.0.3",
+    "tsup": "6.7.0",
+    "typescript": "5.0.4"
   },
   "peerDependencies": {
-    "@prisma/client": "^4.9.0",
-    "next-auth": "^4.18.6"
+    "@prisma/client": "4.9.0",
+    "next-auth": "4.18.6"
   }
 }
