--- a/packages/protect/package.json
+++ b/packages/protect/package.json
@@ -33,20 +33,20 @@
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "@clutchd/eslint-config-clutchd": "^1.1.0",
-    "@types/react": "^18.0.26",
-    "jest": "^29.3.1",
-    "next": "^13.4.2",
-    "next-auth": "^4.18.6",
-    "postcss": "^8.4.20",
-    "react": "^18.2.0",
-    "ts-jest": "^29.0.3",
-    "tsup": "^6.5.0",
-    "typescript": "^5.0.4"
+    "@clutchd/eslint-config-clutchd": "1.1.0",
+    "@types/react": "18.2.6",
+    "jest": "29.3.1",
+    "next": "13.4.2",
+    "next-auth": "4.18.6",
+    "postcss": "8.4.23",
+    "react": "18.2.0",
+    "ts-jest": "29.0.3",
+    "tsup": "6.7.0",
+    "typescript": "5.0.4"
   },
   "peerDependencies": {
-    "next": "^13.4.2",
-    "next-auth": "^4.18.6",
-    "react": "^18.2.0"
+    "next": "13.4.2",
+    "next-auth": "4.18.6",
+    "react": "18.2.0"
   }
 }
