--- a/packages/twx/package.json
+++ b/packages/twx/package.json
@@ -33,16 +33,16 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/clsx": "^1.0.2"
+    "@clutchd/clsx": "1.0.2"
   },
   "devDependencies": {
     "@clutchd/config": "*",
-    "@clutchd/eslint-config-clutchd": "^1.0.0",
-    "@clutchd/tsconfig": "^1.0.1",
-    "jest": "^29.3.1",
-    "node-fetch": "^2.6.1",
-    "terser": "^5.16.1",
-    "tsup": "^6.5.0",
-    "typescript": "^5.0.4"
+    "@clutchd/eslint-config-clutchd": "1.1.0",
+    "@clutchd/tsconfig": "1.0.1",
+    "jest": "29.3.1",
+    "node-fetch": "2.6.1",
+    "terser": "5.16.1",
+    "tsup": "6.7.0",
+    "typescript": "5.0.4"
   }
 }
