--- a/packages/block/package.json
+++ b/packages/block/package.json
@@ -36,7 +36,7 @@
     "@clutchd/twx": "1.0.2"
   },
   "devDependencies": {
-    "@clutchd/config": "*",
+    "@clutchd/config": "1.0.2",
     "@clutchd/eslint-config-clutchd": "1.1.0",
     "@clutchd/tailwind": "2.0.0",
     "jest": "29.3.1",
