--- a/packages/clsx/package.json
+++ b/packages/clsx/package.json
@@ -31,7 +31,7 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@clutchd/config": "*",
+    "@clutchd/config": "1.0.2",
     "@clutchd/eslint-config-clutchd": "1.1.0",
     "@clutchd/tsconfig": "1.0.1",
     "jest": "29.3.1",
