--- a/packages/compose-props/package.json
+++ b/packages/compose-props/package.json
@@ -35,7 +35,7 @@
     "@clutchd/compose-event-handlers": "1.0.3"
   },
   "devDependencies": {
-    "@clutchd/config": "*",
+    "@clutchd/config": "1.0.2",
     "@clutchd/eslint-config-clutchd": "1.1.0",
     "jest": "29.3.1",
     "jest-environment-jsdom": "29.3.1",
