--- a/packages/copyright/package.json
+++ b/packages/copyright/package.json
@@ -35,7 +35,7 @@
     "@clutchd/text": "2.1.0"
   },
   "devDependencies": {
-    "@clutchd/config": "*",
+    "@clutchd/config": "1.0.2",
     "@clutchd/eslint-config-clutchd": "1.1.0",
     "@clutchd/tsconfig": "1.0.1",
     "jest": "29.3.1",
