--- a/packages/get-initials/package.json
+++ b/packages/get-initials/package.json
@@ -34,7 +34,7 @@
     "@clutchd/is-empty": "2.0.4"
   },
   "devDependencies": {
-    "@clutchd/config": "*",
+    "@clutchd/config": "1.0.2",
     "@clutchd/eslint-config-clutchd": "1.1.0",
     "@clutchd/tsconfig": "1.0.1",
     "jest": "29.3.1",
