--- a/packages/link/package.json
+++ b/packages/link/package.json
@@ -35,7 +35,7 @@
     "@clutchd/component": "1.1.0"
   },
   "devDependencies": {
-    "@clutchd/config": "*",
+    "@clutchd/config": "1.0.2",
     "@clutchd/eslint-config-clutchd": "1.1.0",
     "jest": "29.3.1",
     "next": "13.4.4",
