--- a/packages/next-auth-prisma-adapter/package.json
+++ b/packages/next-auth-prisma-adapter/package.json
@@ -32,7 +32,7 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@clutchd/config": "*",
+    "@clutchd/config": "1.0.2",
     "@clutchd/eslint-config-clutchd": "1.1.0",
     "@prisma/client": "4.9.0",
     "jest": "29.3.1",
