--- a/packages/protect/package.json
+++ b/packages/protect/package.json
@@ -32,7 +32,7 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@clutchd/config": "*",
+    "@clutchd/config": "1.0.2",
     "@clutchd/eslint-config-clutchd": "1.1.0",
     "@types/react": "18.2.7",
     "jest": "29.3.1",
