--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -36,7 +36,7 @@
     "@clutchd/twx": "1.0.2"
   },
   "devDependencies": {
-    "@clutchd/config": "*",
+    "@clutchd/config": "1.0.2",
     "@clutchd/eslint-config-clutchd": "1.1.0",
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "13.2.0",
