--- a/packages/twx/package.json
+++ b/packages/twx/package.json
@@ -36,7 +36,7 @@
     "@clutchd/clsx": "1.0.2"
   },
   "devDependencies": {
-    "@clutchd/config": "*",
+    "@clutchd/config": "1.0.2",
     "@clutchd/eslint-config-clutchd": "1.1.0",
     "@clutchd/tsconfig": "1.0.1",
     "jest": "29.3.1",
