--- a/packages/ui/compose-refs/package.json
+++ b/packages/ui/compose-refs/package.json
@@ -12,7 +12,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/compose-refs"
+    "directory": "packages/ui/compose-refs"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
