--- a/packages/utils/twx/package.json
+++ b/packages/utils/twx/package.json
@@ -14,7 +14,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/clsx"
+    "directory": "packages/utils/twx"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
