--- a/packages/block/package.json
+++ b/packages/block/package.json
@@ -39,6 +39,8 @@
     "@clutchd/config": "1.1.1",
     "@clutchd/eslint-config-clutchd": "1.1.1",
     "@clutchd/tailwind": "2.0.1",
+    "@testing-library/jest-dom": "5.16.5",
+    "@types/jest": "29.5.2",
     "jest": "29.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
