--- a/packages/divider/package.json
+++ b/packages/divider/package.json
@@ -41,6 +41,8 @@
     "@clutchd/eslint-config-clutchd": "1.1.1",
     "@clutchd/tailwind": "2.0.1",
     "@clutchd/tsconfig": "1.0.1",
+    "@testing-library/jest-dom": "5.16.5",
+    "@types/jest": "29.5.2",
     "jest": "29.3.1",
     "next": "13.4.6",
     "postcss": "8.4.23",
