--- a/packages/link/package.json
+++ b/packages/link/package.json
@@ -37,6 +37,8 @@
   "devDependencies": {
     "@clutchd/config": "1.1.1",
     "@clutchd/eslint-config-clutchd": "1.1.1",
+    "@testing-library/jest-dom": "5.16.5",
+    "@types/jest": "29.5.2",
     "jest": "29.3.1",
     "next": "13.4.6",
     "postcss": "8.4.23",
