--- a/packages/next-auth-prisma-adapter/package.json
+++ b/packages/next-auth-prisma-adapter/package.json
@@ -35,6 +35,8 @@
     "@clutchd/config": "1.1.1",
     "@clutchd/eslint-config-clutchd": "1.1.1",
     "@prisma/client": "4.9.0",
+    "@testing-library/jest-dom": "5.16.5",
+    "@types/jest": "29.5.2",
     "jest": "29.3.1",
     "next-auth": "4.18.6",
     "prisma": "4.9.0",
