--- a/packages/protect/package.json
+++ b/packages/protect/package.json
@@ -34,6 +34,8 @@
   "devDependencies": {
     "@clutchd/config": "1.1.1",
     "@clutchd/eslint-config-clutchd": "1.1.1",
+    "@testing-library/jest-dom": "5.16.5",
+    "@types/jest": "29.5.2",
     "@types/react": "18.2.7",
     "jest": "29.3.1",
     "next": "13.4.6",
