--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -38,9 +38,9 @@
   "devDependencies": {
     "@clutchd/config": "1.1.1",
     "@clutchd/eslint-config-clutchd": "1.1.1",
-    "@testing-library/jest-dom": "5.16.1",
+    "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.2.0",
-    "@types/testing-library__jest-dom": "5.14.5",
+    "@types/jest": "29.5.2",
     "jest": "29.3.1",
     "next-auth": "4.18.6",
     "postcss": "8.4.23",
