--- a/packages/ui/slot/package.json
+++ b/packages/ui/slot/package.json
@@ -37,10 +37,10 @@
   "devDependencies": {
     "@clutchd/config": "1.1.1",
     "@clutchd/eslint-config-clutchd": "1.1.1",
-    "@testing-library/jest-dom": "5.16.1",
+    "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.2.0",
+    "@types/jest": "29.5.2",
     "@types/react": "18.2.7",
-    "@types/testing-library__jest-dom": "5.14.5",
     "jest": "29.3.1",
     "react": "18.2.0",
     "ts-jest": "29.0.3",
