--- a/packages/utils/bundlejs/package.json
+++ b/packages/utils/bundlejs/package.json
@@ -34,6 +34,8 @@
     "@clutchd/config": "1.1.1",
     "@clutchd/eslint-config-clutchd": "1.1.1",
     "@clutchd/tsconfig": "1.0.1",
+    "@testing-library/jest-dom": "5.16.5",
+    "@types/jest": "29.5.2",
     "@types/node-fetch": "^2.6.4",
     "jest": "29.3.1",
     "tsup": "6.7.0",
