--- a/packages/utils/get-initials/package.json
+++ b/packages/utils/get-initials/package.json
@@ -37,6 +37,8 @@
     "@clutchd/config": "1.1.1",
     "@clutchd/eslint-config-clutchd": "1.1.1",
     "@clutchd/tsconfig": "1.0.1",
+    "@testing-library/jest-dom": "5.16.5",
+    "@types/jest": "29.5.2",
     "jest": "29.3.1",
     "ts-jest": "29.0.3",
     "tsup": "6.7.0",
