--- a/packages/avatar/package.json
+++ b/packages/avatar/package.json
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "@clutchd/eslint-config-clutchd": "1.1.1",
-    "@clutchd/jest": "*",
+    "@clutchd/jest": "1.0.0",
     "@clutchd/tailwind": "2.0.1",
     "@clutchd/tsconfig": "1.0.1",
     "@types/react": "18.2.7",
