--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "@clutchd/eslint-config-clutchd": "1.1.1",
-    "@clutchd/jest": "*",
+    "@clutchd/jest": "1.0.0",
     "next-auth": "4.18.6",
     "postcss": "8.4.23",
     "react": "18.2.0",
