--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "@clutchd/eslint-config-clutchd": "1.1.1",
-    "@clutchd/jest": "*",
+    "@clutchd/jest": "1.0.0",
     "@clutchd/tailwind": "2.0.1",
     "next": "13.4.6",
     "postcss": "8.4.23",
