--- a/packages/copyright/package.json
+++ b/packages/copyright/package.json
@@ -36,7 +36,7 @@
   },
   "devDependencies": {
     "@clutchd/eslint-config-clutchd": "1.1.1",
-    "@clutchd/jest": "*",
+    "@clutchd/jest": "1.0.0",
     "@clutchd/tsconfig": "1.0.1",
     "next": "13.4.6",
     "postcss": "8.4.23",
