--- a/packages/protect/package.json
+++ b/packages/protect/package.json
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "@clutchd/eslint-config-clutchd": "1.1.1",
-    "@clutchd/jest": "*",
+    "@clutchd/jest": "1.0.0",
     "@types/react": "18.2.7",
     "next": "13.4.6",
     "next-auth": "4.18.6",
