--- a/packages/ui/component/package.json
+++ b/packages/ui/component/package.json
@@ -35,7 +35,7 @@
   },
   "devDependencies": {
     "@clutchd/eslint-config-clutchd": "1.1.1",
-    "@clutchd/jest": "*",
+    "@clutchd/jest": "1.0.0",
     "@testing-library/react": "13.2.0",
     "@types/react": "18.2.7",
     "react": "18.2.0",
