--- a/packages/ui/compose-event-handlers/package.json
+++ b/packages/ui/compose-event-handlers/package.json
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "@clutchd/eslint-config-clutchd": "1.1.1",
-    "@clutchd/jest": "*",
+    "@clutchd/jest": "1.0.0",
     "tsup": "6.7.0",
     "typescript": "5.0.4"
   }
