--- a/packages/ui/slot/package.json
+++ b/packages/ui/slot/package.json
@@ -36,7 +36,7 @@
   },
   "devDependencies": {
     "@clutchd/eslint-config-clutchd": "1.1.1",
-    "@clutchd/jest": "*",
+    "@clutchd/jest": "1.0.0",
     "@types/react": "18.2.7",
     "react": "18.2.0",
     "tsup": "6.7.0",
