--- a/packages/utils/get-initials/package.json
+++ b/packages/utils/get-initials/package.json
@@ -35,7 +35,7 @@
   },
   "devDependencies": {
     "@clutchd/eslint-config-clutchd": "1.1.1",
-    "@clutchd/jest": "*",
+    "@clutchd/jest": "1.0.0",
     "@clutchd/tsconfig": "1.0.1",
     "tsup": "6.7.0",
     "typescript": "5.0.4"
