--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@changesets/cli": "2.22.0",
     "@clutchd/eslint-config-clutchd": "1.1.2",
     "@manypkg/cli": "0.19.2",
+    "eslint": "8.41.0",
     "prettier": "2.8.4",
     "turbo": "1.10.3"
   },
