--- a/packages/protect/package.json
+++ b/packages/protect/package.json
@@ -25,14 +25,14 @@
   ],
   "scripts": {
     "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
-    "clean": "rm -rf .next .turbo node_modules coverage dist package-lock.json",
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
-    "prepublish": "npm run build",
+    "prepublish": "pnpm run build",
     "test": "jest"
   },
   "devDependencies": {
     "@clutchd/jest": "1.0.1",
+    "@clutchd/tsconfig": "1.1.0",
     "@types/react": "18.2.7",
     "next": "13.4.6",
     "next-auth": "4.18.6",
