--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,8 +9,8 @@ updates:
     assignees:
       - "CrutchTheClutch"
 
-  # Maintain dependencies for npm
-  - package-ecosystem: "npm"
+  # Maintain dependencies for pnpm
+  - package-ecosystem: "pnpm"
     directory: "/"
     schedule:
       interval: "daily"
