--- a/package.json
+++ b/package.json
@@ -2,16 +2,13 @@
   "name": "clutchd",
   "version": "0.0.0",
   "private": true,
-  "workspaces": [
-    "apps/*",
-    "packages/**/*"
-  ],
   "scripts": {
     "benchmark": "turbo run benchmark --concurrency=1",
     "build": "turbo run build",
     "changeset": "changeset",
-    "clean": "turbo run clean && rm -rf .next .turbo node_modules coverage package-lock.json",
+    "clean": "find . -type d \\( -name 'node_modules' -o -name '.turbo' \\) -prune -print -exec rm -rf '{}' \\;",
     "dev": "turbo run dev --no-cache --parallel",
+    "preinstall": "npx only-allow pnpm",
     "format": "prettier --write \"**/*.{js,json,jsx,ts,tsx,md,mdx}\"",
     "postinstall": "manypkg check",
     "lint": "turbo run lint",
@@ -26,10 +23,10 @@
     "@manypkg/cli": "0.21.0",
     "eslint": "8.41.0",
     "prettier": "2.8.4",
-    "turbo": "1.10.4"
+    "turbo": "1.10.6"
   },
   "engines": {
     "node": ">=18.0.0",
-    "npm": ">=7.0.0"
+    "pnpm": ">=8.0.0"
   }
 }
