--- a/packages/divider/package.json
+++ b/packages/divider/package.json
@@ -26,10 +26,9 @@
   ],
   "scripts": {
     "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
-    "clean": "rm -rf .next .turbo node_modules coverage dist package-lock.json",
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
-    "prepublish": "npm run build",
+    "prepublish": "pnpm run build",
     "test": "jest"
   },
   "dependencies": {
@@ -40,6 +39,7 @@
     "@clutchd/jest": "1.0.1",
     "@clutchd/tailwind": "2.0.2",
     "@clutchd/tsconfig": "1.1.0",
+    "@types/react": "18.2.7",
     "next": "13.4.6",
     "postcss": "8.4.23",
     "react": "18.2.0",
