--- a/packages/utils/is-empty/package.json
+++ b/packages/utils/is-empty/package.json
@@ -24,10 +24,9 @@
   ],
   "scripts": {
     "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
-    "clean": "rm -rf .next .turbo node_modules coverage dist package-lock.json",
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
-    "prepublish": "npm run build",
+    "prepublish": "pnpm run build",
     "test": "jest"
   },
   "devDependencies": {
