update deps, migrate to nextra

--- a/apps/ui/tsconfig.json
+++ b/apps/ui/tsconfig.json
@@ -1,11 +1,3 @@
 {
-  "extends": "@clutchd/tsconfig/nextjs.json",
-  "compilerOptions": {
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ]
-  },
-  "include": ["next-env.d.ts", ".next/types/**/*.ts"]
+  "extends": "@clutchd/tsconfig/nextjs.json"
 }
