update readme and export test for compose pkgs

--- a/ui/compose-preventable-event-handlers/package.json
+++ b/ui/compose-preventable-event-handlers/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@clutchd/compose-preventable-event-handlers",
   "version": "1.0.0",
+  "description": "A small utility intended to quickly compose multiple preventable event handlers into a single handler.",
   "keywords": [
     "clutchd",
     "compose-preventable-event-handlers",
@@ -33,6 +34,7 @@
     "@clutchd/merge-event-handlers": "1.0.0"
   },
   "devDependencies": {
+    "@clutchd/bundlejs": "0.1.2",
     "@clutchd/jest": "1.0.2",
     "@clutchd/tsconfig": "1.1.0",
     "jest": "29.5.0",
