--- a/ui/merge-event-handlers/package.json
+++ b/ui/merge-event-handlers/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@clutchd/merge-event-handlers",
   "version": "1.0.0",
+  "description": "A small utility intended to quickly merge multiple event handlers for a provided event.",
   "keywords": [
     "clutchd",
     "merge-event-handlers",
@@ -30,6 +31,7 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@clutchd/bundlejs": "0.1.2",
     "@clutchd/jest": "1.0.2",
     "@clutchd/tsconfig": "1.1.0",
     "jest": "29.5.0",
