--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -50,7 +50,7 @@
     "typescript": "5.1.3"
   },
   "peerDependencies": {
-    "next": "13.4.7",
-    "react": "18.2.0"
+    "next": "^13.4",
+    "react": "^18.2"
   }
 }
