--- a/packages/jest/package.json
+++ b/packages/jest/package.json
@@ -35,7 +35,7 @@
     "jest": "29.5.0"
   },
   "peerDependencies": {
-    "@types/jest": "29.5.2",
-    "jest": "29.5.0"
+    "@types/jest": "^29.5",
+    "jest": "^29.5"
   }
 }
