--- a/packages/protect/package.json
+++ b/packages/protect/package.json
@@ -46,8 +46,8 @@
     "typescript": "5.1.3"
   },
   "peerDependencies": {
-    "next": "13.4.7",
-    "next-auth": "4.18.6",
-    "react": "18.2.0"
+    "next": "^13.4",
+    "next-auth": "^4.18",
+    "react": "^18.2"
   }
 }
