--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -50,7 +50,7 @@
     "typescript": "5.1.3"
   },
   "peerDependencies": {
-    "next-auth": "4.18.6",
-    "react": "18.2.0"
+    "next-auth": "^4.18",
+    "react": "^18.2"
   }
 }
