--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -27,9 +27,9 @@
     "@types/react-dom": "18.2.6"
   },
   "peerDependencies": {
-    "@types/jest": "29.5.2",
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6"
+    "@types/jest": "^29.5",
+    "@types/node": "^20.3",
+    "@types/react": "^18.2",
+    "@types/react-dom": "^18.2"
   }
 }
