update clean and test commands

--- a/turbo.json
+++ b/turbo.json
@@ -10,7 +10,7 @@
     },
     "lint": {},
     "test": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["build"],
       "outputs": ["coverage/**"]
     }
   }
