--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,8 @@
 {
   "pipeline": {
+    "benchmark": {
+      "dependsOn": ["^build"]
+    },
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
@@ -10,7 +13,7 @@
     },
     "lint": {},
     "test": {
-      "dependsOn": ["build"],
+      "dependsOn": ["benchmark", "build"],
       "outputs": ["coverage/**"]
     }
   }
