remove benchmark requirement

--- a/turbo.json
+++ b/turbo.json
@@ -13,7 +13,7 @@
     },
     "lint": {},
     "test": {
-      "dependsOn": ["benchmark", "build"],
+      "dependsOn": ["build"],
       "outputs": ["coverage/**"]
     }
   }
